# disco-spot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bun.lockb  environment.yml  package.json  pyproject.toml  requirements.txt  test_yt_fetch.html
404/: index.html
src/: dj-spot.ts  providers.ts  schema.sql
src/disco-spot/: bot.py
src/disco_spot/: bot.py
tests/: test_bot.py
